# braindb

./: .env.bench.example  .env.example  .gitignore  .gitmodules  BRAINDB_GUIDE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.bench.yml  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
alembic/versions/: 005_relation_count.py  005_wiki_system.py  006_relation_count.py  007_dish_slug_index.py
benchmarks/beam/: README.md  __init__.py  adapter.py  bench.py  config.py  judge.py  requirements.txt  runner.Dockerfile  score.py  warmup.py
braindb/: config.py  ingest_watcher.py  main.py  wiki_scheduler.py
braindb/agent/: agent.py  hooks.py  run_state.py  schemas.py  tools.py
braindb/routers/: agent.py  entities.py  memory.py  relations.py  wiki.py
braindb/schemas/: entities.py  relations.py  search.py
braindb/services/: context.py  embedding_service.py  graph.py  keyword_service.py  search.py  tree.py  wiki_jobs.py  wiki_sections.py
braindb/tools/: export_wikis.py
docs/: maintainer-agent-plan.md  maintainer-agent-plan2.md  wiki-frontend-plan.md
frontend/: README.md  app.js  graph.js  index.html  style.css  wiki-render.js
skills/braindb-agent/: SKILL.md
tests/: conftest.py  test_context_depth.py  test_create_relation_persistence.py  test_embedding_service.py  test_final_answer_rename.py  test_graph_scoring_uses_importance.py  test_graph_walks_both_directions.py  test_handoff_hooks.py  test_ingest.py  test_ingest_watcher_no_dictation.py  test_relations.py  test_runhooks_countdown.py  test_search.py  test_wiki_jobs_grouping.py  test_wiki_sections.py
(+4 files in other folders)
